working with api

--- a/popup.css
+++ b/popup.css
@@ -17,8 +17,45 @@ body {
   width: 380px;
   min-height: 320px;
   background: #020617;
-  padding: 16px;
+  padding: 10px 16px;
   color: var(--text);
+}
+
+.fade-in {
+  animation: fadeIn 0.25s ease-out;
+}
+
+@keyframes fadeIn {
+  from {
+    opacity: 0;
+    transform: translateY(4px);
+  }
+  to {
+    opacity: 1;
+    transform: translateY(0);
+  }
+}
+
+.shake {
+  animation: shake 0.3s;
+}
+
+@keyframes shake {
+  0% {
+    transform: translateX(0);
+  }
+  25% {
+    transform: translateX(-4px);
+  }
+  50% {
+    transform: translateX(4px);
+  }
+  75% {
+    transform: translateX(-4px);
+  }
+  100% {
+    transform: translateX(0);
+  }
 }
 
 .card {
@@ -183,4 +220,41 @@ body {
   border-radius: 8px;
   background: #fef2f2;
   color: #991b1b;
+}
+#logoutBtn {
+  background: transparent;
+  border: none;
+  color: var(--muted);
+  font-size: 13px;
+  cursor: pointer;
+  margin: 0 0 10px auto;
+  display: block;
+  padding: 10px;
+  border-radius: 8px;
+  transition: all 0.2s ease;
+  /* position: absolute;
+  bottom: 0;
+  left: 50%;
+  transform: translateX(-50%); */
+}
+
+#logoutBtn:hover {
+  /* background-color: #991b1b; */
+  background-color: #ac0c1a;
+  color: white;
+}
+
+input {
+  width: 100%;
+  padding: 10px;
+  border-radius: 8px;
+  border: 1px solid var(--border);
+  margin-bottom: 10px;
+  font-size: 13px;
+}
+
+.signup-link {
+  font-size: 12px;
+  margin-top: 8px;
+  text-align: center;
 }
